fix style and favicon

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CCS Quiz Bowl Team Tryouts</title>
-    <link rel="shortcut icon" href="/assets/images/CCS Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="shortcut icon" href="assets/images/CCS Logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="assets/style.css">
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
