update deadline text

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     REGISTRATION DEADLINE
                 </p>
                 <p class="text-xl sm:text-3xl font-extrabold text-white">
-                    WEDNESDAY, OCT 30, 11:59 PM
+                    WEDNESDAY, OCTOBER 30, 2025 - 11:59 PM
                 </p>
             </div>
         </header>
