update select categories

--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                     <select id="category" name="category" required
                             class="w-full px-4 py-3 bg-gray-700 border border-gray-600 rounded-lg focus:ring-teal-500 focus:border-teal-500 text-white appearance-none">
                         <option value="">Select Category</option>
-                        <option value="Information">Information</option>
-                        <option value="Mathematics">Mathematics</option>
-                        <option value="Science">Science</option>
+                        <option value="Gen. Information">Gen. Information</option>
+                        <option value="Gen. Mathematics">Gen. Mathematics</option>
+                        <option value="Gen. Science">Gen. Science</option>
                     </select>
                 </div>
 
